# rhythm

./: .gitignore  ARCHITECTURE.md  CONTEXT_HANDOFF.md  EXPLORATORY_TESTING.md  FAQ.md  FUTURE_REFACTORING.md  IF_CONDITIONS_IMPLEMENTATION.md  JAVASCRIPT_DEVIATIONS.md  MIGRATION.md  Makefile  PERFORMANCE_CHANGES.md  PERFORMANCE_IMPROVEMENTS.md  README.md  REDIS_BACKEND_DESIGN.md  TESTING.md  TODO.md  WORKFLOW_CONTINUATION_DESIGN.md  WORKFLOW_CONTINUATION_IMPLEMENTATION_PLAN.md  WORKFLOW_DSL_FEATURES.md  build.sh  docker-compose.yml  enqueue_example.py  init.sh  pyproject.toml  run_enqueue.sh  run_worker.sh  test_e2e.sh  test_manual.py
core/: Cargo.toml
core/.cargo/: config.toml
core/examples/: run_migrations.rs
core/src/: adapter.rs  application.rs  benchmark.rs  cli.rs  client.rs  client_adapter.rs  config.rs  continuation_test.rs  db.rs  executions.rs  init.rs  lib.rs  signals.rs  test_helpers.rs  types.rs  worker.rs  workflows.rs
core/src/db/: executions.rs  mod.rs  pool.rs  signals.rs  work_queue.rs  workflow_definitions.rs  workflow_execution_context.rs
core/src/db/tests/: executions_tests.rs  mod.rs  work_queue_tests.rs
core/src/executions/: claim.rs  create.rs  lifecycle.rs  mod.rs  query.rs  tests.rs
core/src/executor/: exec_loop.rs  expressions.rs  json.rs  mod.rs  outbox.rs  statements.rs  vm.rs
core/src/executor/stdlib/: mod.rs  task.rs  time.rs  workflow.rs
core/src/executor/tests/: assign_tests.rs  await_tests.rs  basic_tests.rs  composite_tests.rs  declare_tests.rs  error_tests.rs  for_loop_tests.rs  helpers.rs  if_tests.rs  literal_tests.rs  mod.rs  nullish_coalescing_tests.rs  optional_chaining_tests.rs  signal_tests.rs  task_tests.rs  time_tests.rs  timer_tests.rs  truthy_tests.rs  while_tests.rs  workflow_tests.rs
core/src/executor/types/: ast.rs  control.rs  mod.rs  phase.rs  values.rs
core/src/internal_worker/: mod.rs
core/src/interpreter/: executor.rs  expression_tests.rs  mod.rs  parser.rs  parser.rs.backup  semantic_validator.rs  stdlib.rs  workflow.pest
core/src/interpreter/executor/: executor_tests.rs  expression_tests.rs  mod.rs  (+2 more)
core/src/parser/: flow.pest  mod.rs  semantic_validator.rs  tests.rs
core/src/services/: initialization_service.rs  mod.rs  scheduler_service.rs  worker_service.rs  workflow_service.rs
core/src/v2/: client_adapter.rs  mod.rs  test_helpers.rs  types.rs
core/src/worker/: awaitable.rs  claim.rs  complete.rs  mod.rs  runner.rs  runner_tests.rs  signals.rs
core/test_workflows/: README.md  basic_sequential.flow  fire_and_forget.flow  json_types.flow  mixed_await.flow  simple_wrapped.flow  test_continuation.flow  variables_fire_and_forget.flow  variables_in_complex_json.flow  variables_multiple.flow  variables_simple.flow
lsp/: Cargo.toml  README.md
lsp/src/: backend.rs  completions.rs  hover.rs
lsp/src/parser/: ast.rs  mod.rs
node/native/: Cargo.toml
node/native/src/: lib.rs
python/: FINAL_PERFORMANCE_SUMMARY.md  PERFORMANCE_ANALYSIS.md  README.md  pyproject.toml  test_replay.py
python/currant/: __init__.py  __main__.py  benchmark.py  benchmark_activities.py  benchmark_tasks.py  cli.py  client.py  context.py  decorators.py  init.py  models.py  registry.py  rust_bridge.py  utils.py  worker.py
python/docs/: api-docs.yml  python-api.json  python-api.yml
python/examples/: __init__.py  enqueue_example.py  signal_example.py  simple_example.py  test_workflow_execution.py
python/examples/access_request/: app.py  send_signal.py  tasks.py  worker.py
python/examples/quickstart/: README.md  app.py  docker-compose.yml  tasks.py  worker.py
python/examples/signals/: README.md  app.py  send_approval.py  tasks.py  worker.py
python/examples/simple_app/: README.md  app.py  scheduler.py  tasks.py  worker.py
python/examples/sub_workflows/: README.md  app.py  tasks.py  worker.py
python/examples/workflow_example/: README.md  main.py
python/examples/workflows/: break_continue_examples.flow  for_loop_examples.flow  order_fulfillment.flow  payment_conditional.flow  showcase.flow  testAwait.flow  testVariables.flow  user_onboarding.flow
python/native/: Cargo.toml
python/native/src/: lib.rs  lib.rs.bak2
python/rhythm/: __init__.py  __main__.py  benchmark.py  benchmark_tasks.py  cli.py  client.py  config.py  core.py  core_bridge.py  decorators.py  init.py  models.py  rust_bridge.py  utils.py  worker.py
python/scripts/: README.md  generate_api_ref.py  publish.py
python/test/: migration_test.py  run_enqueue.sh  run_worker.sh  test_e2e.sh  test_manual.py
python/tests/: test_workflow_suite.py
python/tests/test_workflows/: README.md  __init__.py  complex_expressions.flow  deeply_nested_properties.flow  empty_object.flow  if_nested.flow  if_simple.flow  if_with_logical_operators.flow  literal_values.flow  mixed_inputs_and_results.flow  multiple_property_chains.flow  no_tasks.flow  object_construction.flow  property_access.flow  return_literal.flow  sequential_tasks.flow  single_task.flow  tasks.py
python/workflows/: __init__.py  cli.py  client.py  config.py  context.py  decorators.py  rust_bridge.py  worker.py
(+222 files in other folders)
