[package]
name = "currant-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "currant_core"
crate-type = ["rlib"]

[[bin]]
name = "currant"
path = "src/bin/main.rs"

[dependencies]
# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Datetime
chrono = { version = "0.4", features = ["serde"] }

# Unix system calls
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
