[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workflows"
version = "0.1.0"
description = "A lightweight durable execution framework using only Postgres"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
workflows = "workflows.cli:cli"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
