[package]
name = "currant-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI
napi = { version = "2", features = ["async", "serde-json"] }
napi-derive = "2"

# Core currant
currant-core = { path = "../../core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
